fix: fixing some DTO problems